# AIOUSB

./: .gitignore  README.md  build.sh
AIOUSB/: CMakeLists.txt  Copyright.txt  Doxyfile  sourceme.sh
AIOUSB/CMakeScripts/: FindGTestTap.cmake  FindOctave.cmake  build_samples.cmake
AIOUSB/classlib/: .gitattributes  AI16_DataPoint.cpp  AI16_DataPoint.hpp  AI16_DataSet.cpp  AI16_DataSet.hpp  AI16_InputRange.cpp  AI16_InputRange.hpp  AO16_AnalogOutputSubsystem.cpp  AO16_AnalogOutputSubsystem.hpp  AO16_OutputRange.cpp  AO16_OutputRange.hpp  AnalogIORange.cpp  AnalogIORange.hpp  AnalogInputSubsystem.cpp  AnalogInputSubsystem.hpp  AnalogOutputSubsystem.cpp  AnalogOutputSubsystem.hpp  CMakeLists.txt  Counter.cpp  Counter.hpp  CounterSubsystem.cpp  CounterSubsystem.hpp  DA12_AnalogOutputSubsystem.cpp  DA12_AnalogOutputSubsystem.hpp  DA12_OutputRange.cpp  DA12_OutputRange.hpp  DIOStreamSubsystem.cpp  DIOStreamSubsystem.hpp  DeviceSubsystem.cpp  DeviceSubsystem.hpp  DigitalIOSubsystem.cpp  DigitalIOSubsystem.hpp  Makefile  OutputVoltagePoint.hpp  README.md  USBDevice.cpp  USBDevice.hpp  USBDeviceBase.cpp  USBDeviceManager.cpp  USBDeviceManager.hpp  (+18 more)
AIOUSB/classlib/doc/: AI16__DataPoint_8hpp_source.html  AI16__DataSet_8hpp_source.html  AI16__InputRange_8hpp_source.html  AO16__AnalogOutputSubsystem_8hpp_source.html  AO16__OutputRange_8hpp_source.html  AnalogIORange_8hpp_source.html  AnalogInputSubsystem_8hpp_source.html  AnalogOutputSubsystem_8hpp_source.html  CounterSubsystem_8hpp_source.html  Counter_8hpp_source.html  DA12__AnalogOutputSubsystem_8hpp_source.html  DA12__OutputRange_8hpp_source.html  DIOStreamSubsystem_8hpp_source.html  DeviceSubsystem_8hpp_source.html  DigitalIOSubsystem_8hpp_source.html  OutputVoltagePoint_8hpp_source.html  USBDeviceManager_8hpp_source.html  USBDevice_8hpp_source.html  USB__AI16__Family_8hpp_source.html  USB__AO16__Family_8hpp_source.html  USB__CTR__15__Family_8hpp_source.html  USB__DA12__8A__Family_8hpp_source.html  USB__DA12__8E__Family_8hpp_source.html  USB__DIO__16__Family_8hpp_source.html  USB__DIO__32__Family_8hpp_source.html  USB__DIO__Family_8hpp_source.html  annotated.html  classAIOUSB_1_1AI16__DataPoint-members.html  classAIOUSB_1_1AI16__DataPoint.html  classAIOUSB_1_1AI16__DataPointArray-members.html  classAIOUSB_1_1AI16__DataPointArray.html  classAIOUSB_1_1AI16__DataPointArray__coll__graph.dot  classAIOUSB_1_1AI16__DataPointArray__coll__graph.md5  classAIOUSB_1_1AI16__DataPointArray__inherit__graph.dot  classAIOUSB_1_1AI16__DataPointArray__inherit__graph.md5  classAIOUSB_1_1AI16__DataSet-members.html  classAIOUSB_1_1AI16__DataSet.html  classAIOUSB_1_1AI16__DataSet__coll__graph.dot  classAIOUSB_1_1AI16__DataSet__coll__graph.md5  classAIOUSB_1_1AI16__InputRange-members.html  (+215 more)
AIOUSB/doc/: README.html
AIOUSB/java/: Makefile
AIOUSB/lib/: .gitattributes  ADCConfigBlock.c  ADCConfigBlock.h  AIOChannelMask.c  AIOChannelMask.h  AIOChannelRange.c  AIOChannelRange.h  AIOCommandLine.c  AIOCommandLine.h  AIOConfiguration.c  AIOConfiguration.h  AIOContinuousBuffer.c  AIOContinuousBuffer.h  AIOCountsConverter.c  AIOCountsConverter.h  AIODataTypes.h  AIODeviceInfo.c  AIODeviceInfo.h  AIODeviceTable.c  AIODeviceTable.h  AIOEither.c  AIOEither.h  AIOFifo.c  AIOFifo.h  AIOTypes.h  AIOUSBDevice.c  AIOUSBDevice.h  AIOUSB_ADC.c  AIOUSB_ADC.h  AIOUSB_ADC_ExternalCal.c  AIOUSB_Assert.c  AIOUSB_Assert.h  AIOUSB_CTR.c  AIOUSB_CTR.h  AIOUSB_Core.c  AIOUSB_Core.h  AIOUSB_CustomEEPROM.c  AIOUSB_CustomEEPROM.h  AIOUSB_CustomEEPROMRead.c  AIOUSB_CustomEEPROMWrite.c  (+31 more)
AIOUSB/lib/mocks/: Makefile  mock_aiocontbuf_get_data.c  mock_aiocontbuf_get_data_arduino.c  mock_capture_usb.c  mock_dio.c  mock_populate_table.c
AIOUSB/lib/tests/: aio_adc.cpp  aio_configuration.cpp  aio_continuous_buf.cpp  properties.cpp
AIOUSB/lib/wrappers/: AIOUSB.i  AIOUSB.pm  AIOUSB.py  CMakeLists.txt  GNUMakefile  README.txt  WrapperTargets.inc  extconf.rb  setup.py
AIOUSB/lib/wrappers/R/: CMakeLists.txt
AIOUSB/lib/wrappers/java/: CMakeLists.txt
AIOUSB/lib/wrappers/perl/: CMakeLists.txt  GNUMakefile  Makefile.PL
AIOUSB/lib/wrappers/php/: AIOUSB_wrap.c  CMakeLists.txt
AIOUSB/lib/wrappers/python/: AIOUSB.py  AIOUSB_wrap.c  CMakeLists.txt  setup.py
AIOUSB/lib/wrappers/ruby/: CMakeLists.txt  extconf.rb
AIOUSB/lib/wrappers/tests/: run_all_wrappers.t
AIOUSB/samples/: CMakeLists.txt
AIOUSB/samples/TestLib/: CMakeLists.txt  TestCaseSetup.cpp  TestCaseSetup.h
AIOUSB/samples/USB-AI16-16/: .gitattributes  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  Extcal.java  FastITTest  Makefile  Makefile.bak  README.txt  aio_dac.rb  aio_dac.rb.bad  bulk_acquire_sample.c  burst_test.c  c_sample_64_1024.txt  continuous_mode  continuous_mode.c  continuous_mode2  continuous_mode2.cpp  cust_sample.cpp  doit.py  extcal.cpp  foo.yml  histogram.r  output.txt  prom_read_test.cpp  pyusb.py  pyusb.py.tar.bz2  read_channels_test.cpp  reduced_sample.c  reverse_cal_table.cpp  sample  sample.cpp  sample2  sample2.c  simp_test  simp_test.cpp  simple_sample.c  test_bulk.cpp  test_bulk.cpp~  test_disappear.cpp  test_fastscan.cpp
AIOUSB/samples/USB-AI16-16/doc/: Extcal.java.html  Sample.java.html  extcal.cpp.html  sample.cpp.html  sample2.c.html
AIOUSB/samples/USB-AI16-16/lib/: TestCaseSetup.cpp  TestCaseSetup.h
AIOUSB/samples/USB-AO16-16/: Makefile  sample  sample.cpp  sample~
AIOUSB/samples/USB-DA12-8A/: Makefile  SampleClass  sample  sample.cpp
AIOUSB/samples/USB-DIO-16/: Makefile  receiver  receiver.cpp  sample  sample.cpp
AIOUSB/samples/USB-DIO-32/: Makefile  Sample.java  Sample2.java  python_sample.py  sample  sample.cpp  sample.py  sample2.c  sample3.c
AIOUSB/samples/USB-IDIO-16/: README.md  matlab_usb_idio_speed_test.m  matlab_usb_idio_test.m  octave_usb_idio_speed_test.m  octave_usb_idio_test.m  perftest.c  sample.cpp  sample2.c
AIOUSB/samples/USB-IDIO-8/: matlab_usb_idio_test.m  octave_usb_idio_test.m  sample.cpp  sample2.c
AIOUSB/samples/USB-IIRO-16/: Makefile  sample  sample.c  sample.cpp  sample.py
AIOUSB/samples/USB-IIRO-8/: sample.c  sample.cpp  sample.py
Firmware/: 10-acces_usb.rules  (+11 more)
(+18 files in other folders)
