#
# Build samples for USB-AI16-16
#
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


if( NOT AIOUSB_INCLUDE_DIR)
  set(AIOUSB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../lib )
  MESSAGE(STATUS "Setting AIOUSB_INCLUDE_DIR to be : ${AIOUSB_INCLUDE_DIR}" )
  LINK_DIRECTORIES( ${AIOUSB_INCLUDE_DIR} )
  INCLUDE_DIRECTORIES( ${AIOUSB_INCLUDE_DIR} )
  SET( CMAKE_SHARED_LINKER_FLAGS "-L${AIOUSB_INCLUDE_DIR}" )
endif(NOT AIOUSB_INCLUDE_DIR )

if( NOT LIBUSB_FOUND )
  SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeScripts )
  INCLUDE_DIRECTORIES( ${AIOUSB_INCLUDE_DIR} )
  FIND_PACKAGE(libusb-1.0 REQUIRED )
  INCLUDE_DIRECTORIES( ${LIBUSB_1_INCLUDE_DIRS} )
endif( NOT LIBUSB_FOUND )


#MESSAGE(STATUS "AIOUSB_INCLUDE_DIR: ${AIOUSB_INCLUDE_DIR}" )

SET(CMAKE_CXX_FLAGS "-D__aiousb_cplusplus -fPIC" )

ADD_LIBRARY( TestCaseSetup SHARED ${CMAKE_CURRENT_SOURCE_DIR}/TestCaseSetup.cpp )


SET(CMAKE_C_FLAGS   "-std=gnu99 " )
SET( AIOUSB_TESTCASELIB_DIR ${CMAKE_CURRENT_SOURCE_DIR} )


install( TARGETS TestCaseSetup DESTINATION lib )



